--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -1,4 +1,11 @@
 @import url('./styles.css');
+button {
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+}
+body {
+  font-family: 'Montserrat', sans-serif;
+}
 
 .timer {
   display: flex;
@@ -53,7 +60,6 @@ input:disabled {
   padding: 8px 16px;
 
   height: 40px;
-  font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   font-size: 16px;
 
